--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,6 @@
     <link rel="icon" type="image/x-icon" href="image/favicon.ico">
 
     <link rel="stylesheet" href="library/semantic/semantic.min.css">
-    <link rel="stylesheet" href="library/jquery-ui.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="library/toastr.css">
     <link rel="stylesheet" href="css/theme.css">
@@ -37,6 +36,16 @@
     <link rel="stylesheet" href="library/codemirror/material-theme.css">
     <link rel="stylesheet" href="library/codemirror/neat-theme.css">
 
+    <!-- for text compare -->
+    <!-- CodeMirror Search Add-ons -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/search/searchcursor.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/search/search.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/dialog/dialog.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/search/jump-to-line.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/search/matchesonscrollbar.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/dialog/dialog.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/search/matchesonscrollbar.min.css">
+
     <link rel="stylesheet" href="components/decode/decode.css">
 
     <script src="library/jquery.js"></script>
@@ -47,7 +56,6 @@
     <script src="library/codemirror/xml.js"></script>
     <script src="library/codemirror/codemirrorjs.js"></script>
     <script src="library/codemirror/codemirror-mod.js"></script>
-    <script src="library/codemirror/htmlmix.js"></script>
 
     <style>
         .CodeMirror, #table-container2{
