--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="css/theme-color-red.css">
     <link rel="stylesheet" href="css/theme-dark1.css">
     <link rel="stylesheet" href="css/theme-dark2.css">
+    <link rel="stylesheet" href="css/theme-dark3.css">
 
     <link rel="stylesheet" href="components/decode/decode.css">
 
@@ -108,6 +109,9 @@
                                 </div>
                                 <div class="item btn_theme_color" theme="dark2">
                                     <a class="ui black empty circular label tiny"><a class="ui orange empty circular label tiny"></a> Dark Orange
+                                </div>
+                                <div class="item btn_theme_color" theme="dark3">
+                                    <a class="ui blue empty circular label tiny"><a class="ui orange empty circular label tiny"></a> Gradiun
                                 </div>
                             </div>
                         </div>
