--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <a class="ui black empty circular label tiny"><a class="ui orange empty circular label tiny"></a> Dark Orange
                                 </div>
                                 <div class="item btn_theme_color" theme="dark3">
-                                    <a class="ui blue empty circular label tiny"><a class="ui orange empty circular label tiny"></a> Gradiun
+                                    <a class="ui blue empty circular label tiny"><a class="ui orange empty circular label tiny"></a> Gradient1
                                 </div>
                             </div>
                         </div>
