--- a/popup.html
+++ b/popup.html
@@ -17,9 +17,13 @@
     <link rel="stylesheet" href="css/theme-color-teal.css">
     <link rel="stylesheet" href="css/theme-color-green.css">
     <link rel="stylesheet" href="css/theme-color-red.css">
+    <link rel="stylesheet" href="css/theme-dark1.css">
+    <link rel="stylesheet" href="css/theme-dark2.css">
+    <link rel="stylesheet" href="css/theme-dark3.css">
     <link rel="stylesheet" href="library/codemirror/css/codemirror.css">
     <link rel="stylesheet" href="library/codemirror/css/material-theme.css">
     <link rel="stylesheet" href="library/codemirror/css/neat-theme.css">
+
     
 
     <!-- for text compare -->
