--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/theme-dark1.css">
     <link rel="stylesheet" href="css/theme-dark2.css">
     <link rel="stylesheet" href="css/theme-dark3.css">
+    <link rel="stylesheet" href="css/theme-dark4.css">
 
     <link rel="stylesheet" href="components/decode/decode.css">
 
@@ -112,6 +113,9 @@
                                 </div>
                                 <div class="item btn_theme_color" theme="dark3">
                                     <a class="ui blue empty circular label tiny"><a class="ui orange empty circular label tiny"></a> Gradient1
+                                </div>
+                                <div class="item btn_theme_color" theme="dark4">
+                                    <a class="ui black empty circular label tiny"><a class="ui blue empty circular label tiny"></a> Gradient2
                                 </div>
                             </div>
                         </div>
