--- a/index.html
+++ b/index.html
@@ -63,23 +63,23 @@
         </div>
         <p></p>
     </div>
-    <div class="ui sidebar large vertical menu right inverted" id="setting_side_bar">
+    <div class="ui sidebar large vertical menu right inverted bg_color_light" id="setting_side_bar">
             <div class="menu">
                 <div class="header item">Theme</div>
                 <div class="item btn_theme_color" theme="theme-blue">
-                    <a class="ui blue empty circular label large"></a> Blue
+                    <a class="ui blue empty circular label tiny"></a> Blue
                 </div>
                 <div class="item btn_theme_color" theme="theme-teal">
-                    <a class="ui teal empty circular label large"></a> Teal
+                    <a class="ui teal empty circular label tiny"></a> Teal
                 </div>
                 <div class="item btn_theme_color" theme="theme-green">
-                    <a class="ui green empty circular label large" ></a> Green
+                    <a class="ui green empty circular label tiny" ></a> Green
                 </div>
                 <div class="item btn_theme_color" theme="theme-red">
-                    <a class="ui red empty circular label large" ></a> Red
+                    <a class="ui red empty circular label tiny" ></a> Red
                 </div>
                 <div class="item btn_theme_color" theme="dark1">
-                    <a class="ui black empty circular label large" ></a> Dark
+                    <a class="ui black empty circular label tiny" ></a> Dark
                 </div>
                 <div class="item btn_theme_color" theme="dark2">
                     <a class="ui black empty circular label tiny"><a class="ui orange empty circular label tiny"></a> Dark Orange
