--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
     
 </head>
 
-<body class="theme-dark theme-blue">
+<body>
+    <div id="theme" class="theme-dark theme-blue">
     <div>
-        <div class="ui active inverted dimmer" id="body_loading_page">
+        <div class="ui active inverted" id="body_loading_page">
           <div class="ui text loader">Loading</div>
         </div>
         <p></p>
@@ -350,7 +351,7 @@
             </div>
         </div>
       </div>
-    
+    </div>
 
 
     <div id="pop-main"></div>
