--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:type" content="website">
 	<meta property="og:title" content="URL Decode">
-	<meta property="og:image" content="image/share.png">
+	<meta property="og:image" content="https://khawmean-hub.github.io/kosign_url_decode_json/image/share.png">
 	<meta property="og:url" content="https://khawmean-hub.github.io/kosign_url_decode_json/">
     <meta property="og:url" content="https://khaw.vercel.app/">
 
