--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<meta property="og:url" content="https://khawmean-hub.github.io/kosign_url_decode_json/">
     <meta property="og:url" content="https://khaw.vercel.app/">
 
-    <title>URL Decode;</title>
+    <title>URL Decode</title>
     <link rel="icon" type="image/x-icon" href="image/favicon.ico">
 
     <link rel="stylesheet" href="library/semantic/semantic.min.css">
