--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="css/theme-dark2.css">
     <link rel="stylesheet" href="css/theme-dark3.css">
     <link rel="stylesheet" href="css/theme-dark4.css">
+    <link rel="stylesheet" href="css/theme-light1.css">
 
     <link rel="stylesheet" href="components/decode/decode.css">
 
@@ -86,6 +87,9 @@
                 </div>
                 <div class="item btn_theme_color" theme="theme-red">
                     <a class="ui red empty circular label tiny"></a> Red
+                </div>
+                <div class="item btn_theme_color" theme="light1">
+                    <a class="ui red empty circular label tiny"></a> Light Gradient
                 </div>
                 <div class="item btn_theme_color" theme="dark1">
                     <a class="ui black empty circular label tiny"></a> Dark
@@ -174,6 +178,18 @@
                     <div><i class="image icon"></i> Your Image</div>
                 </div>
                 <div class="item btn-bg-img">
+                    <img class="ui rounded image" src="./image/ankorwat.jpg">
+                </div>
+                <div class="item btn-bg-img">
+                    <img class="ui rounded image" src="./image/wall.jpg">
+                </div>
+                <div class="item btn-bg-img">
+                    <img class="ui rounded image" src="./image/blackpink.jpg">
+                </div>
+                <div class="item btn-bg-img">
+                    <img class="ui rounded image" src="./image/bg-dark-06.jpg">
+                </div>
+                <div class="item btn-bg-img">
                     <img class="ui rounded image" src="./image/wp2561560.webp">
                 </div>
                 <div class="item btn-bg-img">
@@ -187,6 +203,12 @@
                 </div>
                 <div class="item btn-bg-img">
                     <img class="ui rounded image" src="./image/wp4609703-mobile-legends-skins-wallpapers.jpg">
+                </div>
+                <div class="item btn-bg-img">
+                    <img class="ui rounded image" src="./image/onepiece.png">
+                </div>
+                <div class="item btn-bg-img">
+                    <img class="ui rounded image" src="./image/anya.jpg">
                 </div>
             </div>
         </div>
