--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="library/codemirror/css/material-theme.css">
     <link rel="stylesheet" href="library/codemirror/css/neat-theme.css">
     <link rel="stylesheet" href="library/codemirror/css/ocean.css">
+    <link rel="stylesheet" href="library/codemirror/addon/fold/foldgutter.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="library/toastr.css">
     <link rel="stylesheet" href="css/theme.css">
@@ -56,9 +57,21 @@
     <script src="library/semantic/semantic.min.js"></script>
     <script src="library/toastr.js"></script>
     <script src="library/codemirror/js/codemirror.js"></script>
+
+    <!-- addon -->
+    <script src="library/codemirror/addon/fold/fold-core.js"></script>
+    <script src="library/codemirror/addon/fold/foldgutter.js"></script>
+    <script src="library/codemirror/addon/fold/brace-fold.js"></script>
+    <script src="library/codemirror/addon/fold/xml-fold.js"></script>
+    <script src="library/codemirror/addon/fold/indent-fold.js"></script>
+    <script src="library/codemirror/addon/fold/markdown-fold.js"></script>
+    <script src="library/codemirror/addon/fold/comment-fold.js"></script>
+
     <script src="library/codemirror/js/xml.js"></script>
     <script src="library/codemirror/js/codemirrorjs.js"></script>
     <script src="library/codemirror/js/codemirror-mod.js"></script>
+
+
 
     <style id="headerStyle_cust"></style>
     <style id="font_size_cust"></style>
