add button format

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <script src="library/codemirror/js/xml.js"></script>
     <script src="library/codemirror/js/codemirrorjs.js"></script>
     <script src="library/codemirror/js/codemirror-mod.js"></script>
+    <script src="library/html-beauti.js"></script>
 
 
 
