--- a/index.html
+++ b/index.html
@@ -309,13 +309,13 @@
                                             <h3 class="ui header txt_color">URI Decode</h3>
                                             <div class="field">
                                                 <label class="text_fixed_color" for="url_text">Paste here</label>
-                                                <div class="ui input actions">
+                                                <div class="ui input actions icon">
                                                     <div id="btn_paste_url" data-tooltip="Paste" data-inverted=""
                                                         data-position="bottom left"
                                                         class="ui button icon btn_color_light"><i
                                                             class="paste icon"></i></div>
-                                                    <input type="text" id="url_text"
-                                                        placeholder="Paste url encode here">
+                                                    <input type="text" class="input_have_clear" id="url_text" placeholder="Paste url encode here">
+                                                    <i class="close link icon btn_clear_its_input" style="display: none;"></i>
                                                 </div>
                                             </div>
                                         </div>
